minor adjustment to pom.xml